objects/Hospital__c.object
<CustomObject>
    <label>Hospital</label>
    <nameField>
        <label>Hospital Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Hospitals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>State__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Vijayawada</fullName>
                </value>
                <value>
                    <fullName>Visakhapatnam</fullName>
                </value>
                <value>
                    <fullName>Ongole</fullName>
                </value>
                <value>
                    <fullName>Tirupati</fullName>
                </value>
                <value>
                    <fullName>Kurnool</fullName>
                </value>
                <value>
                    <fullName>Hyderabad</fullName>
                </value>
                <value>
                    <fullName>Adilabad</fullName>
                </value>
                <value>
                    <fullName>Nizamabad</fullName>
                </value>
                <value>
                    <fullName>MahaboobNagar</fullName>
                </value>
                <value>
                    <fullName>Bengaluru</fullName>
                </value>
                <value>
                    <fullName>Hospet</fullName>
                </value>
                <value>
                    <fullName>Raichur</fullName>
                </value>
                <value>
                    <fullName>Chennai</fullName>
                </value>
                <value>
                    <fullName>Selam</fullName>
                </value>
                <value>
                    <fullName>Tiruchi</fullName>
                </value>
                <value>
                    <fullName>Trivandrum</fullName>
                </value>
                <value>
                    <fullName>Kanyakumari</fullName>
                </value>
                <value>
                    <fullName>Kochi</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Areas__c</fullName>
        <label>Areas</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>City__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Chandanagar</fullName>
                </value>
                <value>
                    <fullName>Kukatpally</fullName>
                </value>
                <value>
                    <fullName>HimayathNagar</fullName>
                </value>
                <value>
                    <fullName>Labbipet</fullName>
                </value>
                <value>
                    <fullName>BenzCircle</fullName>
                </value>
                <value>
                    <fullName>Poranki</fullName>
                </value>
                <value>
                    <fullName>Gajuvaka</fullName>
                </value>
                <value>
                    <fullName>Duvvada</fullName>
                </value>
                <value>
                    <fullName>Siripuram</fullName>
                </value>
                <value>
                    <fullName>Bcamp</fullName>
                </value>
                <value>
                    <fullName>MadhaviNagar</fullName>
                </value>
                <value>
                    <fullName>Anna Nagar</fullName>
                </value>
                <value>
                    <fullName>TNagar</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Andhra Pradesh</fullName>
                </value>
                <value>
                    <fullName>Telangana</fullName>
                </value>
                <value>
                    <fullName>Karnataka</fullName>
                </value>
                <value>
                    <fullName>TamilNadu</fullName>
                </value>
                <value>
                    <fullName>Kerala</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Rating__c</fullName>
        <label>Rating</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Specialities__c</fullName>
        <label>Specialities</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>MultiSpeciality__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Neurology</fullName>
                </value>
                <value>
                    <fullName>Anesthesiology</fullName>
                </value>
                <value>
                    <fullName>Dermatology</fullName>
                </value>
                <value>
                    <fullName>Emergency</fullName>
                </value>
                <value>
                    <fullName>Ophthalmology</fullName>
                </value>
                <value>
                    <fullName>Pathology</fullName>
                </value>
                <value>
                    <fullName>Urology</fullName>
                </value>
                <value>
                    <fullName>Radiology</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Hospital_Email__c</fullName>
        <caseSensitive>true</caseSensitive>
        <label>Hospital Email</label>
        <type>Email</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Hospital_Phone__c</fullName>
        <label>Hospital Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>MultiSpeciality__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MultiSpeciality?</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>